# Stable-HyperDiffusion

./: .gitignore  README.md  environment.yaml  environment_simon.yaml  evaluation.ipynb  ferdy.ipynb  pyproject.toml  simon.ipynb
lhdm/: README.md  main.py
lhdm/configs/: autoencoder_ferdy.yaml  autoencoder_sanity_check.yaml  autoencoder_simon.yaml  autoencoder_simon_n_1024.yaml  autoencoder_small.yaml  diffusion_sanity_check.yaml  test.yaml  visualize.yaml
lhdm/core/: __init__.py  commands.py  sandbox.py  train.py  train_diffusion.py  utils.py  visualize.py
lhdm/data/: __init__.py  data_utils.py  inr_dataset.py  irn_dataset.py  mlp_models.py  utils.py
lhdm/models/: autoencoder.py  base.py  inr.py  losses.py  utils.py
lhdm/models/autoencoder/: losses.py  pl_mlp.py  pl_transformer.py  transformer.py
lhdm/models/diffusion/: diffusion.py  gaussian_diffusion.py
lhdm/sane/: autoencoder.py  dataset.py
scripts/: ferdy.ipynb  ferdy_diffusion.py  ferdy_transformer.py  generalize_transformer.py  hyperdiffusion.py  overfit_transformer.py  sanity_diffusion.py  sanity_mlp.py  sanity_transformer.py  show_2.py  simon.ipynb  simon_transformer.py  small_mlp.py  small_transformer.py
src/core/: config.py  config_diffusion.py  train.py  train_diffusion.py  visualize.py
src/data/: augmentations.py  data_converter.py  inr.py  inr_dataset.py  old_augmentations.py  utils.py
src/evaluation/: metrics.py  model_utils.py  visualization_utils.py
src/models/: utils.py
src/models/autoencoder/: losses.py  pl_mlp.py  pl_transformer.py  pl_transformer_old.py  transformer.py  (+1 more)
(+8 files in other folders)
